@@ -1,3 +1,11 @@
+2006-03-14  Wakaba  <wakaba@suika.fam.cx>
+
+	* Encode.dis (ungetc): New method.
+
+	* Makefile: Rules to make |Encode| modules
+	for |euc-jp-1997|, |shift-jis-1997|, |gl-jis-1978|, |gl-jis-1983|,
+	and |gl-jis-1997| are added.
+
 2006-03-12  Wakaba  <wakaba@suika.fam.cx>
 
 	* Encode.dis (createMCDecodeHandle): New
